@@ -1,3 +1,9 @@
+globus-xio-udt-driver (1.0-1+gt6.@distro@) @distro@; urgency=low
+
+  * Packaging fixes
+
+ -- Globus Toolkit <support@globus.org>  Wed, 05 Mar 2014 15:33:37 -0500
+
 globus-xio-udt-driver (0.9-1) unstable; urgency=low
 
   * Update build to check for bind2 in udt 4.11
